# Store-management

./: CMakeLists.txt  book.cpp  book.h  bookfactory.cpp  bookfactory.h  buyproductwindow.cpp  buyproductwindow.h  customer.cpp  customer.h  iproductfactory.h  magazine.cpp  magazine.h  magazinefactory.cpp  magazinefactory.h  main.cpp  mainwindow.cpp  mainwindow.h  product.h  productwindow.cpp  productwindow.h  store.cpp  store.h  transaction.cpp  transaction.h  transactions.cpp  transactions.h
